[package]
name = "raft-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
actix-web = "3"
actix-rt = "1.1.1"
serde = {version="1.0.132",features = ["derive"]}
serde_json = "1.0"
chrono = {version="0.4.19",features = ["serde"]}
regex = "1.5"
rust-crypto = "^0.2"
json="*"
once_cell = "*"

reqwest = { version = "0.11", features = ["blocking", "json"] }
async-std = { version = "1.2.0", features = ["attributes"] }



[profile.release]
lto = true